Make video fluid width and add styles for transcript container

--- a/index.html
+++ b/index.html
@@ -10,50 +10,53 @@
   </head>
   <body class="container">
     <div class="vid__container">
-      <video class="vid__player" width="600" height="337">
+      <video class="vid__player" height="432" width="768" style="max-width: 100%">
         <source src="video/video.mp4" type="video/mp4">
         <source src="video/video.ogg" type="video/ogg">
         <p>Bummer, your browser doesn't support HTML5 video.</p>
       </video>
     </div>
 
-    <p>
-      <span>Now that we've looked at the architecture
-      of the internet, let's see how you might</span>
-      <span>connect your personal devices to
-      the internet inside your house.</span>
-      <span>Well there are many ways to
-      connect to the internet, and</span>
-      <span>most often people connect wirelessly.</span>
-    </p>
+    <div class="transcript__container">
+      <p>
+        <span>Now that we've looked at the architecture
+        of the internet, let's see how you might</span>
+        <span>connect your personal devices to
+        the internet inside your house.</span>
+        <span>Well there are many ways to
+        connect to the internet, and</span>
+        <span>most often people connect wirelessly.</span>
+      </p>
 
-    <p>
-      <span class="active">Let's look at an example of how
-      you can connect to the internet.</span>
-      <span>If you live in a city or a town,
-      you probably have a coaxial cable for</span>
-      <span>cable Internet, or a phone line if you
-      have DSL, running to the outside of</span>
-      <span>your house, that connects you to
-      the Internet Service Provider, or ISP.</span>
-      <span>If you live far out in the country,
-      you'll more likely have</span>
-      <span>a dish outside your house, connecting
-      you wirelessly to your closest ISP, or</span>
-      <span>you might also use the telephone system.</span>
-    </p>
+      <p>
+        <span class="active">Let's look at an example of how
+        you can connect to the internet.</span>
+        <span>If you live in a city or a town,
+        you probably have a coaxial cable for</span>
+        <span>cable Internet, or a phone line if you
+        have DSL, running to the outside of</span>
+        <span>your house, that connects you to
+        the Internet Service Provider, or ISP.</span>
+        <span>If you live far out in the country,
+        you'll more likely have</span>
+        <span>a dish outside your house, connecting
+        you wirelessly to your closest ISP, or</span>
+        <span>you might also use the telephone system.</span>
+      </p>
 
-    <p>
-      <span>Whether a wire comes straight from
-      the ISP hookup outside your house, or</span>
-      <span>it travels over radio
-      waves from your roof,</span>
-      <span>the first stop a wire will make once
-      inside your house, is at your modem.</span>
-      <span>A modem is what connects the internet
-      to your network at home.</span>
-      <span>A few common residential modems are DSL or</span>
-    </p>
+      <p>
+        <span>Whether a wire comes straight from
+        the ISP hookup outside your house, or</span>
+        <span>it travels over radio
+        waves from your roof,</span>
+        <span>the first stop a wire will make once
+        inside your house, is at your modem.</span>
+        <span>A modem is what connects the internet
+        to your network at home.</span>
+        <span>A few common residential modems are DSL or</span>
+      </p>
+    </div>
+
 
       <!-- jQuery -->
       <script
