Add transcript highlight functionality

--- a/index.html
+++ b/index.html
@@ -19,41 +19,41 @@
 
     <div class="transcript__container">
       <p>
-        <span>Now that we've looked at the architecture
+        <span data-start=".240" data-end="4.130">Now that we've looked at the architecture
         of the internet, let's see how you might</span>
-        <span>connect your personal devices to
+        <span data-start="4.130" data-end="7.535">connect your personal devices to
         the internet inside your house.</span>
-        <span>Well there are many ways to
+        <span data-start="7.535" data-end="11.270">Well there are many ways to
         connect to the internet, and</span>
-        <span>most often people connect wirelessly.</span>
+        <span data-start="11.270" data-end="13.960">most often people connect wirelessly.</span>
       </p>
 
       <p>
-        <span class="active">Let's look at an example of how
+        <span data-start="13.960" data-end="17.940" class="active">Let's look at an example of how
         you can connect to the internet.</span>
-        <span>If you live in a city or a town,
+        <span data-start="17.940" data-end="22.370">If you live in a city or a town,
         you probably have a coaxial cable for</span>
-        <span>cable Internet, or a phone line if you
+        <span data-start="22.370" data-end="26.880">cable Internet, or a phone line if you
         have DSL, running to the outside of</span>
-        <span>your house, that connects you to
+        <span data-start="26.880" data-end="30.920">your house, that connects you to
         the Internet Service Provider, or ISP.</span>
-        <span>If you live far out in the country,
+        <span data-start="32.100" data-end="34.730">If you live far out in the country,
         you'll more likely have</span>
-        <span>a dish outside your house, connecting
+        <span data-start="34.730" data-end="39.430">a dish outside your house, connecting
         you wirelessly to your closest ISP, or</span>
-        <span>you might also use the telephone system.</span>
+        <span data-start="39.430" data-end="41.190">you might also use the telephone system.</span>
       </p>
 
       <p>
-        <span>Whether a wire comes straight from
+        <span data-start="42.350" data-end="46.300">Whether a wire comes straight from
         the ISP hookup outside your house, or</span>
-        <span>it travels over radio
+        <span data-start="46.300" data-end="49.270">it travels over radio
         waves from your roof,</span>
-        <span>the first stop a wire will make once
+        <span data-start="49.270" data-end="53.760">the first stop a wire will make once
         inside your house, is at your modem.</span>
-        <span>A modem is what connects the internet
+        <span data-start="53.760" data-end="57.780">A modem is what connects the internet
         to your network at home.</span>
-        <span>A few common residential modems are DSL or</span>
+        <span data-start="57.780" data-end="60.150">A few common residential modems are DSL or</span>
       </p>
     </div>
 
