Remove active class from HTML markup

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </p>
 
       <p>
-        <span data-start="13.960" data-end="17.940" class="active">Let's look at an example of how
+        <span data-start="13.960" data-end="17.940">Let's look at an example of how
         you can connect to the internet.</span>
         <span data-start="17.940" data-end="22.370">If you live in a city or a town,
         you probably have a coaxial cable for</span>
