Remove charset attribute from script tag

--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
         src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
       <!-- MediaElement.js -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.9/mediaelement-and-player.min.js" integrity="sha256-bGz/0MMW4d9dsyq3BEXee8f377noiWxTibmRZqWvvYI=" crossorigin="anonymous"></script>
-      <script src="js/app.js" charset="utf-8"></script>
+      <script src="js/app.js"></script>
   </body>
 </html>
